--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
 streamlit
 pandas
 plotly
-sqlalchemy
-passlib[bcrypt]
-python-jose[cryptography]
-pydantic
-psycopg2-binary
-bcrypt==4.0.1
+supabase
 python-dotenv
